--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,10 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
+    ext {
+        compileSdkVersion   = 31                // or latest
+        targetSdkVersion    = 31                // or latest
+        appCompatVersion    = "1.4.2"           // or latest
+        }
     repositories {
         google()
         jcenter()
@@ -15,6 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+
     }
 }
 
